gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-doc_notable_trait_dg.rs
#[doc(notable_trait)] // { dg-error ".E0658." "" { target *-*-* } }
trait SomeTrait {}

fn main() {}

